--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Geek Store",
   "theme_color": "rgba(195,81,81,0.89)",
   "background_color": "#ffffff",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "landscape",
   "Scope": "/",
   "start_url": "/",
